# used-car-price-regression

./: .gitignore  README.md  pyproject.toml
data/: submission.csv
data/processed/: train_labels_processed.csv
notebooks/: informal.ipynb
reports/training/: OLS_Regression_Summary.html  OLS_Regression_Summary.txt  training_results.html
src/data/: preprocessing.py  preprocessing_baseline.py
src/features/: feature_engineering.py
src/models/: test_model.py  train_model.py
src/visualization/: visualize.py
